# BEVFusion_with_MQBench

./: .gitignore  AGENTS.md  CLIlog.md  README.md  RELEASE_NOTES.md  START_GUIDE.md  deployment_summary.md  setup.py
.claude/: settings.local.json
archive/resnet50_experiments/: README.md
archive/resnet50_experiments/configs/: default.yaml
configs/: default.yaml
configs/nuscenes/: default.yaml
configs/nuscenes/det/: default.yaml
configs/nuscenes/det/transfusion/secfpn/camera+lidar/resnet50_v0p075/: convfuser.yaml  default.yaml
docs/: COMMANDS.md  HANDOFF_MASTER.md  NEXT_PLAN.md  PTQ_BENCHMARK_NOTES.md  QAT_EXAMPLE.md  QAT_README.md  QandA.md  REMOTE_TRAINING.md  REPORT.md  RESULTS_LOG.md  RUNBOOK.md  SERVER_DEPLOY.md  SUMMARY_CN.md  TOOLS_CLEANUP_SUMMARY.md  ablation.md  cmd.md  deploy_cmd.md  deploy_result.md  high_cpu_load_bug.md  learning_plan.md  order.md  orin_deploy_cmd.md  serverlog.md  tempcmd.md
docs/archive/: Handoff phase3.md  Handoff5.md  Handoff7.md  Handoff8.md  Handoff9.md  Handoff_phase4.md  PHASE1_SUMMARY.md
mmdet3d/apis/: test.py  train.py
mmdet3d/core/anchor/: anchor_3d_generator.py
mmdet3d/core/bbox/: box_np_ops.py
mmdet3d/core/bbox/assigners/: hungarian_assigner.py
mmdet3d/core/bbox/coders/: transfusion_bbox_coder.py
mmdet3d/core/utils/: visualize.py
mmdet3d/datasets/: nuscenes_dataset.py
mmdet3d/datasets/pipelines/: formating.py  loading.py  transforms_3d.py
mmdet3d/models/backbones/: radar_encoder.py
mmdet3d/models/fusers/: conv.py
mmdet3d/models/fusion_models/: bevfusion.py
mmdet3d/models/heads/bbox/: transfusion.py
mmdet3d/models/necks/: generalized_lss.py  second.py
mmdet3d/models/vtransforms/: base.py  depth_lss.py  lss.py
mmdet3d/ops/: __init__.py
mmdet3d/ops/ball_query/src/: ball_query_cpu.cpp
mmdet3d/ops/bev_pool/: __init__.py  bev_pool.py
mmdet3d/ops/furthest_point_sample/src/: furthest_point_sample_cpu.cpp
mmdet3d/ops/gather_points/src/: gather_points_cpu.cpp
mmdet3d/ops/group_points/src/: group_points_cpu.cpp
mmdet3d/ops/interpolate/src/: interpolate.cpp
mmdet3d/ops/knn/src/: knn_cpu.cpp
mmdet3d/ops/spconv/: conv.py
mmdet3d/ops/spconv/include/tensorview/: tensorview.h
mmdet3d/ops/voxel/src/: scatter_points_cuda.cu  voxelization.h
tools/: build_cuda_ext.py  build_trt_engine.py  debug_data.py  diag_lidar_distribution.py  engine_utils.py  eval_zero_torch_full.py  lab_server_deploy.sh  make_ppt.py  orin_prepare_nuscenes_val_subset.py  prepare_bev_indices.py  prepare_nuscenes_data.py  quant_benchmark.py  quant_ptq.py  quant_ptq_brecq.py  quant_ptq_minmax.py  quant_train.py  test.py  test_zero_torch_smoke.py  train.py  train_resnet50_server.sh  trt_accuracy_test.py  trt_eval_hybrid.py  trt_eval_hybrid_all.py  trt_export_fuser.py  trt_infer.py  trt_infer_standalone.py  trt_infer_standalone_opt.py  trt_infer_zero_torch.py  tv_allocator.py  tv_log2_quant.cu  tv_sparse_encoder.py  tv_sparse_encoder_opt.py  validate_e2e_zero_torch.py  validate_trt_engine_numdiff.py  verify_vtransform_trt.py  vis_channel_distribution.py  visualize.py
tools/analysis/: analyze_lloydmax.py  analyze_lloydmax_fast.py  extract_lidar_npy.py  plot_lidar_laplace_paper_figs.py  plot_loga_metrics.py  plot_vtransform_activation_hist_zh.py
tools/data_converter/: nuscenes_converter.py
tools/debug/: benchmark_vtransform_numba.py  benchmark_vtransform_numpy.py  benchmark_vtransform_opt.py  debug_depth_map_first_n.py  debug_depth_map_serial_cuda.py  debug_depth_map_single_point.py  debug_depth_map_step.py  debug_vtransform_gpu_vs_numpy.py  inspect_engines.py  replot_layer_one.py  replot_loga_one.py  replot_vtransform_one.py
tools/export_utils/: README.md  UPLOAD_TO_SERVER.md  build_engine.py  build_lidar_spconv23.py  deploy_phase1.py  diag_fakequant_op.py  export_fuser_decoder.py  export_head.py  export_lidar.py  export_neck.py  export_swin.py  export_vtransform.py  fix_lidar_onnx.py  get_static_pad_values.py  mqbench_onnx_symbolic.py  phase1_swin_export.py  setup_phase1.sh  verify_depthnet.py  verify_lidar.py
tools/scripts/: autodl_setup.sh  lab_server_deploy.sh  train_resnet50_server.sh
tools/trt_plugins/bev_pool_v2/: CMakeLists.txt
tools/trt_plugins/bev_pool_v2/src/: bev_pool_v2_kernel.cu  bev_pool_v2_plugin.cpp  bev_pool_v2_plugin.h
tools/trt_plugins/bev_pool_v2/test/: build_test.sh  run_test.sh  test_plugin_registration.cpp
tools/trt_plugins/sparse_log2_quant/: CMakeLists.txt
tools/trt_plugins/sparse_log2_quant/src/: sparse_log2_quant_kernel.cu  sparse_log2_quant_plugin.cpp  sparse_log2_quant_plugin.h
tools/trt_plugins/sparse_log2_quant/test/: build_test.sh  run_test.sh  test_plugin_registration.cpp
tools/zero_torch_ops/bev_pool/: bev_pool_cuda.cu  bev_pool_wrapper.cpp  bev_pool_wrapper.py  build_bev_pool.py  test_bev_pool_ctypes.py  test_bev_pool_zero_torch.py
tools/zero_torch_ops/iou3d/: build_iou3d.py  iou3d_kernel.cu  iou3d_wrapper.cpp  iou3d_wrapper.py  test_iou3d_ctypes.py  test_iou3d_functional.py
tools/zero_torch_ops/voxel_layer/: build_voxel_layer.py  test_voxelization_functional.py  voxelization_cuda.cu  voxelization_wrapper.cpp  voxelization_wrapper.py
tools/zero_torch_ops/vtransform_gpu/: build_vtransform_gpu.py  test_vtransform_minimal.py  vtransform_cuda.cu  vtransform_wrapper.py
